--- a/ansible/templates/service.j2
+++ b/ansible/templates/service.j2
@@ -4,11 +4,11 @@ After=network.target
 
 [Service]
 Environment=NODE_PORT=8080
-WorkingDirectory=/home/todoapp/app
+WorkingDirectory=/home/{{ todoapp_user }}/app
 Type=simple
-User=todoapp
-ExecStartPre=/bin/sleep 5
-ExecStart=/usr/bin/node /home/todoapp/app/server.js
+User={{ todoapp_user }}
+ExecStartPre=/bin/sleep 15
+ExecStart=/usr/bin/node /home/{{ todoapp_user }}/app/server.js
 Restart=always
 
 [Install]
